# protobuf_samples

./: CMakeLists.txt  LICENSE  README.md
assets/cmake-v3.11.4/: FindProtobuf.cmake
assets/test/: Readme.txt
modules/protobuf_c_null/: CMakeLists.txt
modules/protobuf_c_null/protofiles/: EmployeeC.proto
modules/protobuf_c_null/src/: main.cpp
modules/protobuf_null/: CMakeLists.txt
modules/protobuf_null/src/: main.cpp  pch.h
script/: build.cmd
